--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -2,8 +2,6 @@ name: Build and Upload RPM Package
 
 on:
   push:
-    branches:
-      - main
   pull_request:
 
 jobs:
@@ -33,3 +31,9 @@ jobs:
         with:
           name: rpm-package
           path: ~/rpmbuild/RPMS/**/*.rpm
+
+      - name: Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: ~/rpmbuild/RPMS/**/*.rpm
