--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -1,11 +1,12 @@
-name: Build and Upload RPM Package
+name: Build and Release RPM Package
 
 on:
   push:
-  pull_request:
+    tags:
+      - '*'
 
 jobs:
-  build-rpm:
+  build-and-release-fedora:
     runs-on: ubuntu-latest
     container: fedora:latest
 
@@ -22,18 +23,11 @@ jobs:
           rpmdev-setuptree
           mkdir -p ~/rpmbuild/{SOURCES,SPECS}
 
-      - name: Copy Files to Build Environment
+      - name: Build RPM Files
         run: |
-          make build
+          make build || { echo "Build failed!"; exit 1; }
 
-      - name: Upload RPM Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: rpm-package
-          path: ~/rpmbuild/RPMS/**/*.rpm
-
-      - name: Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: ~/rpmbuild/RPMS/**/*.rpm
+          files: /github/home/rpmbuild/RPMS/*/*.rpm
