--- a/.github/workflows/rpmbuild.yml
+++ b/.github/workflows/rpmbuild.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Build RPM Files
         run: |
-          make build || { echo "Build failed!"; exit 1; }
+          make build-rpm
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
