feat: add CI pipeline along with unit tests

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,9 @@ evdev = "*"
 black = "*"
 isort = "*"
 pylint = "*"
+pytest = "*"
+pyfakefs = "*"
+pytest-asyncio = "*"
 
 [requires]
 python_version = "3.12"
-python_full_version = "3.12.0"
